Before start of fine tunining

--- a/notebooks/Labelling.ipynb
+++ b/notebooks/Labelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,13 @@
     "# Objective: Convert labeled Amharic text into CoNLL format.\n",
     "# Libraries/Tools: pandas, text editors.\n",
     "# 1.\tFormat data with entity tags (B-, I-, O):\n",
+    "\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# create a dataframe with Channel data\n",
+    "df = pd.read_csv(r'C:\\Users\\Almazt\\OneDrive - Ethiopian Airlines\\Desktop\\10 Academy\\EthioMart-Week 5\\data/telegram_meneshayeofficial_clean_data.csv')\n",
+    "df.head()\n",
     "\n",
     "def format_to_conll(df, entity_mapping):\n",
     "    conll_data = []\n",
@@ -24,24 +31,54 @@
     "        conll_data.append((\"\", \"\"))  # Separate sentences\n",
     "    return conll_data\n",
     "\n",
-    "# Example entity mapping and usage\n",
-    "import pandas as pd\n",
+    "clean_data = df[['clean_text']]\n",
     "\n",
     "# Sample data for clean_data\n",
-    "data = {\n",
-    "    'clean_text': [\n",
-    "        'አዲስ ቤተማር ብር',\n",
-    "        'አዲስ ቤተማር',\n",
-    "        'ብር አዲስ'\n",
-    "    ]\n",
-    "}\n",
-    "clean_data = pd.DataFrame(data)\n",
+    "# data = {\n",
+    "#     'clean_text': [\n",
+    "#         'ጉርድ ሾላ ሆሊ ሲቲ ሴንተር',\n",
+    "#         'ፒያሳ ካንትሪ ታወር',\n",
+    "#         'ጀሞ ደሊና ሞል',\n",
+    "#         'ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት'\n",
+    "#     ]\n",
+    "# }\n",
+    "# clean_data = pd.DataFrame(data)\n",
     "\n",
-    "entity_mapping = {'አዲስ': 'B-LOC', 'ቤተማር': 'B-Product', 'ብር': 'B-PRICE'}\n",
+    "# entity_mapping = {'አዲስ': 'B-LOC', 'ቤተማር': 'B-Product', 'ብር': 'B-PRICE'}\n",
+    "\n",
+    "entity_mapping = {'meneshayeofficial': 'B-TELEGRAM', 'ከመነሻዬ': 'B-TELEGRAM', 'ከመነሻዬኦፊል': 'B-TELEGRAM', 'ከመነሻዬኦፊልኦፊል': 'B-TELEGRAM',\n",
+    "                  'httptiktokcommeneshayeofficial': 'B-URL', \n",
+    "                  'httpstmegelaglewoch': 'B-URL', \n",
+    "                  'httpslinktreemeneshaye': 'B-URL',\n",
+    "                  '0989939393': 'B-PHONE', '0930323334':  'B-PHONE', '0911259661': 'B-PHONE',\n",
+    "                  'አድራሻ ጉርድ ሾላ ሆሊ ሲቲ ሴንተር  ፒያሳ ካንትሪ ታወር  ጀሞ ደሊና ሞል  ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት': 'B-LOCaTION', \n",
+    "                  'አድራሻ': 'B-LOC', 'ጉርድ': 'B-LOC', 'ሾላ': 'B-LOC', 'ሆሊ': 'B-LOC', \n",
+    "                  'ሲቲ': 'B-LOC', 'ሴንተር': 'B-LOC', 'ፒያሳ': 'B-LOC', 'ካንትሪ': 'B-LOC',\n",
+    "                  'ታወር': 'B-LOC', 'ጀሞ': 'B-LOC', 'ደሊና': 'B-LOC', 'ሞል': 'B-LOC',\n",
+    "                  'ገርጂ': 'B-LOC', 'ከፋውንቴን': 'B-LOC', 'ህንፃ': 'B-LOC', 'ፊት ለፊት': 'B-LOC', \n",
+    "                  'ጉርድ ሾላ ሆሊ ሲቲ ሴንተር': 'B-LOC', 'ፒያሳ ካንትሪ ታወር': 'B-LOC', 'ጀሞ ደሊና ሞል': 'B-LOC', 'ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት': 'B-LOC',\n",
+    "                  'ጉርድ_ሾላ_ቅርንጫፍ_ሆሊ_ሲቲ_ሴንተር': 'B-LOC', 'ፒያሳ_ካንትሪ_ታወር': 'B-LOC', 'ጀሞ_ደሊና_ሞል': 'B-LOC', 'ገርጂ_ከፋውንቴን_ህንፃ_ፊት_ለፊት': 'B-LOC',\n",
+    "                  'ጉርድ_ሾላ_ቅርንጫፍ': 'B-LOC', 'ፒያሳ_ካንትሪ': 'B-LOC', 'ጀሞ_ደሊና': 'B-LOC', 'ገርጂ_ከፋውንቴን': 'B-LOC', 'ህንፃ_ፊት_ለፊት': 'B-LOC',\n",
+    "                  'ፊት': 'B-LOC', 'ለፊት': 'B-LOC', 'ጉርድ_ሾላ': 'B-LOC', 'ቅርንጫፍ': 'B-LOC', 'ሆሊ_ሲቲ': 'B-LOC', 'ሴንተር': 'B-LOC',\n",
+    "                  'math': 'B-SUBJECT', 'maths': 'B-SUBJECT', 'mathematics': 'B-SUBJECT',\n",
+    "                  'concentration': 'B-SUBJECT', 'primaryeducation': 'B-SUBJECT', 'braindevelopment': 'B-SUBJECT', 'kidsimagination': 'B-SUBJECT',\n",
+    "                  'kidscreativity': 'B-SUBJECT', 'kidslearning': 'B-SUBJECT', 'kidseducation': 'B-SUBJECT', 'kids': 'B-SUBJECT', 'education': 'B-SUBJECT',\n",
+    "                  'በአማርኛ': 'B-LANGUAGE', 'በእንግሊዘኛ': 'B-LANGUAGE', 'በእንግሊዝኛ': 'B-LANGUAGE', 'በአማርኛናአንድነት': 'B-LANGUAGE', 'በአማርኛናአንድነትእንግሊዝኛ': 'B-LANGUAGE',\n",
+    "                  'meneshaye': 'B-PRODUCT',\n",
+    "                  'kidscoloring': 'B-SUBJECT', 'drawing': 'B-SUBJECT', 'sketching': 'B-SUBJECT', 'art': 'B-SUBJECT', 'kidsdrawing': 'B-SUBJECT',\n",
+    "                  'painting': 'B-SUBJECT',\n",
+    "                    'imagination': 'B-SUBJECT', 'globalart': 'B-SUBJECT', 'funart': 'B-SUBJECT', 'creativearts': 'B-SUBJECT', 'coloringpage': 'B-SUBJECT',\n",
+    "                    'happykids': 'B-SUBJECT', 'kidsactivity': 'B-SUBJECT', 'illustration': 'B-SUBJECT', 'coloringbook': 'B-SUBJECT', 'coloringpages': 'B-SUBJECT',\n",
+    "                    'creativity': 'B-SUBJECT', 'dailyaffirmations': 'B-SUBJECT', 'coloringtherapy': 'B-SUBJECT', 'coloring': 'B-SUBJECT',\n",
+    "                    'coloringforadults': 'B-SUBJECT', 'coloringforchildren': 'B-SUBJECT', 'coloringforfun': 'B-SUBJECT',\n",
+    "                    'coloringforstressrelief': 'B-SUBJECT', 'coloringforrelaxation': 'B-SUBJECT', 'coloringforrelaxing': 'B-SUBJECT',\n",
+    "                    'kidsmaths': 'B-SUBJECT', 'kidsmathematics': 'B-SUBJECT', 'kidsconcentration': 'B-SUBJECT', 'kidsprimaryeducation': 'B-SUBJECT',\n",
+    "                    'መደመር': 'B-MATHSOPERATION', 'መቀነስ': 'B-MATHSOPERATION', 'ማካፈል': 'B-MATHSOPERATION', 'ማባዛት': 'B-MATHSOPERATION', 'ጥቅል': 'B-PRODUCT','ድክዬ': 'B-PRODUCT'}                    \n",
     "labeled_data = format_to_conll(clean_data, entity_mapping)\n",
+    "\n",
     "# 2.\tSave CoNLL format to a plain text file:\n",
     "\n",
-    "with open(\"labeled_data.conll\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/labeled_data.conll\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for token, label in labeled_data:\n",
     "        f.write(f\"{token} {label}\\n\" if token else \"\\n\")"
    ]
