Interim Submission version

--- a/notebooks/Labelling.ipynb
+++ b/notebooks/Labelling.ipynb
@@ -2,29 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 42,
-=======
-   "execution_count": 2,
->>>>>>> 8af4ca7cedebb665f282e8733b0214fb141b6adf
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                text  \\\n",
+      "0  ተወዳጇ ሚስ ተወዳጁን የሂሳብ ሊቅ ጥቅልን ለማስማሪያነት ተጠቅማለች\\nቁጥ...   \n",
+      "1  ልጆችዎ ድክ ድክ ብለው ንግግር ይጀምሩ\\n\\n🗣ድክዬ ድክዬ. . .ድክ. ....   \n",
+      "2  **የቀለሜ መነሻ ጥቅል\\nልጆች እየወደዱ የሚማሩበት ፤ ሳይሰላቹ የሚያጠኑ...   \n",
+      "3  እነዚህን ሁሉ በአንድ ላይ የገና ስጦታ\\n\\nለመሸለም\\n1.  @gelagl...   \n",
+      "4  የገና ስጦታ🎁🎁🎁\\nለመሸለም\\n1.  @gelagle  tik tok accou...   \n",
+      "\n",
+      "                        date             sender  \\\n",
+      "0  2025-01-16 08:37:07+00:00  meneshayeofficial   \n",
+      "1  2025-01-11 07:27:53+00:00  meneshayeofficial   \n",
+      "2  2025-01-03 07:28:40+00:00  meneshayeofficial   \n",
+      "3  2025-01-02 09:26:08+00:00  meneshayeofficial   \n",
+      "4  2025-01-01 12:12:51+00:00  meneshayeofficial   \n",
+      "\n",
+      "                                          clean_text  \n",
+      "0  ተወዳጇ ሚስ ተወዳጁን የሂሳብ ሊቅ ጥቅልን ለማስማሪያነት ተጠቅማለች\\nቁጥ...  \n",
+      "1  ልጆችዎ ድክ ድክ ብለው ንግግር ይጀምሩ\\n\\nድክዬ ድክዬ  ድክ  ድክዬ\\n...  \n",
+      "2  የቀለሜ መነሻ ጥቅል\\nልጆች እየወደዱ የሚማሩበት  ሳይሰላቹ የሚያጠኑበት\\...  \n",
+      "3  እነዚህን ሁሉ በአንድ ላይ የገና ስጦታ\\n\\nለመሸለም\\n1  gelagle_...  \n",
+      "4  የገና ስጦታ\\nለመሸለም\\n1  gelagle  tik tok account መቀ...  \n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Label Dataset in CoNLL Format\n",
     "# Objective: Convert labeled Amharic text into CoNLL format.\n",
     "# Libraries/Tools: pandas, text editors.\n",
     "# 1.\tFormat data with entity tags (B-, I-, O):\n",
     "\n",
-<<<<<<< HEAD
     "import pandas as pd\n",
     "import re\n",
     "\n",
     "# create a dataframe with Channel data\n",
     "df = pd.read_csv(r'C:\\Users\\Almazt\\OneDrive - Ethiopian Airlines\\Desktop\\10 Academy\\EthioMart-Week 5\\data/telegram_meneshayeofficial_clean_data.csv')\n",
-    "df.head()\n",
+    "print(df.head())\n",
     "\n",
-=======
->>>>>>> 8af4ca7cedebb665f282e8733b0214fb141b6adf
     "def format_to_conll(df, entity_mapping):\n",
     "    conll_data = []\n",
     "    for _, row in df.iterrows():\n",
@@ -38,36 +58,23 @@
     "        conll_data.append((\"\", \"\"))  # Separate sentences\n",
     "    return conll_data\n",
     "\n",
-<<<<<<< HEAD
     "clean_data = df[['clean_text']]\n",
     "\n",
-    "# Sample data for clean_data\n",
-    "# data = {\n",
-    "#     'clean_text': [\n",
-    "#         'ጉርድ ሾላ ሆሊ ሲቲ ሴንተር',\n",
-    "#         'ፒያሳ ካንትሪ ታወር',\n",
-    "#         'ጀሞ ደሊና ሞል',\n",
-    "#         'ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት'\n",
-    "#     ]\n",
-    "# }\n",
-    "# clean_data = pd.DataFrame(data)\n",
-    "\n",
-    "# entity_mapping = {'አዲስ': 'B-LOC', 'ቤተማር': 'B-Product', 'ብር': 'B-PRICE'}\n",
-    "\n",
+    "# Entity mapping and usage\n",
     "entity_mapping = {'meneshayeofficial': 'B-TELEGRAM', 'ከመነሻዬ': 'B-TELEGRAM', 'ከመነሻዬኦፊል': 'B-TELEGRAM', 'ከመነሻዬኦፊልኦፊል': 'B-TELEGRAM',\n",
     "                  'httptiktokcommeneshayeofficial': 'B-URL', \n",
     "                  'httpstmegelaglewoch': 'B-URL', \n",
     "                  'httpslinktreemeneshaye': 'B-URL',\n",
     "                  '0989939393': 'B-PHONE', '0930323334':  'B-PHONE', '0911259661': 'B-PHONE',\n",
-    "                  'አድራሻ ጉርድ ሾላ ሆሊ ሲቲ ሴንተር  ፒያሳ ካንትሪ ታወር  ጀሞ ደሊና ሞል  ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት': 'B-LOCaTION', \n",
-    "                  'አድራሻ': 'B-LOC', 'ጉርድ': 'B-LOC', 'ሾላ': 'B-LOC', 'ሆሊ': 'B-LOC', \n",
-    "                  'ሲቲ': 'B-LOC', 'ሴንተር': 'B-LOC', 'ፒያሳ': 'B-LOC', 'ካንትሪ': 'B-LOC',\n",
-    "                  'ታወር': 'B-LOC', 'ጀሞ': 'B-LOC', 'ደሊና': 'B-LOC', 'ሞል': 'B-LOC',\n",
-    "                  'ገርጂ': 'B-LOC', 'ከፋውንቴን': 'B-LOC', 'ህንፃ': 'B-LOC', 'ፊት ለፊት': 'B-LOC', \n",
+    "                  'ጉርድ ሾላ ሆሊ ሲቲ ሴንተር  ፒያሳ ካንትሪ ታወር  ጀሞ ደሊና ሞል  ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት': 'B-LOC', \n",
+    "                  'ጉርድ': 'B-LOC', 'ሾላ': 'I-LOC', 'ሆሊ': 'B-LOC', \n",
+    "                  'ሲቲ': 'I-LOC', 'ሴንተር': 'I-LOC', 'ፒያሳ': 'B-LOC', 'ካንትሪ': 'I-LOC',\n",
+    "                  'ታወር': 'I-LOC', 'ጀሞ': 'B-LOC', 'ደሊና': 'I-LOC', 'ሞል': 'I-LOC',\n",
+    "                  'ገርጂ': 'B-LOC', 'ከፋውንቴን': 'I-LOC', 'ህንፃ': 'I-LOC', 'ፊት ለፊት': 'I-LOC', \n",
     "                  'ጉርድ ሾላ ሆሊ ሲቲ ሴንተር': 'B-LOC', 'ፒያሳ ካንትሪ ታወር': 'B-LOC', 'ጀሞ ደሊና ሞል': 'B-LOC', 'ገርጂ ከፋውንቴን ህንፃ ፊት ለፊት': 'B-LOC',\n",
     "                  'ጉርድ_ሾላ_ቅርንጫፍ_ሆሊ_ሲቲ_ሴንተር': 'B-LOC', 'ፒያሳ_ካንትሪ_ታወር': 'B-LOC', 'ጀሞ_ደሊና_ሞል': 'B-LOC', 'ገርጂ_ከፋውንቴን_ህንፃ_ፊት_ለፊት': 'B-LOC',\n",
     "                  'ጉርድ_ሾላ_ቅርንጫፍ': 'B-LOC', 'ፒያሳ_ካንትሪ': 'B-LOC', 'ጀሞ_ደሊና': 'B-LOC', 'ገርጂ_ከፋውንቴን': 'B-LOC', 'ህንፃ_ፊት_ለፊት': 'B-LOC',\n",
-    "                  'ፊት': 'B-LOC', 'ለፊት': 'B-LOC', 'ጉርድ_ሾላ': 'B-LOC', 'ቅርንጫፍ': 'B-LOC', 'ሆሊ_ሲቲ': 'B-LOC', 'ሴንተር': 'B-LOC',\n",
+    "                  'ፊት': 'I-LOC', 'ለፊት': 'I-LOC', 'ጉርድ_ሾላ': 'B-LOC', 'ቅርንጫፍ': 'I-LOC', 'ሆሊ_ሲቲ': 'I-LOC', 'ሴንተር': 'I-LOC',\n",
     "                  'math': 'B-SUBJECT', 'maths': 'B-SUBJECT', 'mathematics': 'B-SUBJECT',\n",
     "                  'concentration': 'B-SUBJECT', 'primaryeducation': 'B-SUBJECT', 'braindevelopment': 'B-SUBJECT', 'kidsimagination': 'B-SUBJECT',\n",
     "                  'kidscreativity': 'B-SUBJECT', 'kidslearning': 'B-SUBJECT', 'kidseducation': 'B-SUBJECT', 'kids': 'B-SUBJECT', 'education': 'B-SUBJECT',\n",
@@ -87,26 +94,6 @@
     "# 2.\tSave CoNLL format to a plain text file:\n",
     "\n",
     "with open(\"../data/labeled_data.conll\", \"w\", encoding=\"utf-8\") as f:\n",
-=======
-    "# Example entity mapping and usage\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Sample data for clean_data\n",
-    "data = {\n",
-    "    'clean_text': [\n",
-    "        'አዲስ ቤተማር ብር',\n",
-    "        'አዲስ ቤተማር',\n",
-    "        'ብር አዲስ'\n",
-    "    ]\n",
-    "}\n",
-    "clean_data = pd.DataFrame(data)\n",
-    "\n",
-    "entity_mapping = {'አዲስ': 'B-LOC', 'ቤተማር': 'B-Product', 'ብር': 'B-PRICE'}\n",
-    "labeled_data = format_to_conll(clean_data, entity_mapping)\n",
-    "# 2.\tSave CoNLL format to a plain text file:\n",
-    "\n",
-    "with open(\"labeled_data.conll\", \"w\", encoding=\"utf-8\") as f:\n",
->>>>>>> 8af4ca7cedebb665f282e8733b0214fb141b6adf
     "    for token, label in labeled_data:\n",
     "        f.write(f\"{token} {label}\\n\" if token else \"\\n\")"
    ]
