additional change on code

--- a/notebooks/fetch_channel_data.ipynb
+++ b/notebooks/fetch_channel_data.ipynb
@@ -9,6 +9,19 @@
     "# Fetch messages with error handling\n",
     "\n",
     "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Access variables\n",
+    "api_id = os.getenv(\"TELEGRAM_API_ID\")\n",
+    "api_hash = os.getenv(\"TELEGRAM_API_HASH\")\n",
+    "phone = os.getenv(\"TELEGRAM_PHONE\")\n",
+    "\n",
+    "print(f\"API ID: {api_id}\")\n",
+    "print(f\"API Hash: {api_hash}\")\n",
+    "print(f\"Phone: {phone}\")\n",
     "\n",
     "def fetch_channel_data(channel_username, limit=50):\n",
     "    try:\n",
