ready for final submission

--- a/notebooks/fetch_channel_data.ipynb
+++ b/notebooks/fetch_channel_data.ipynb
@@ -2,22 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "API ID: None\n",
+      "API Hash: None\n",
+      "Phone: None\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch messages with error handling\n",
     "\n",
+    "import pandas as pd\n",
+    "import logging\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
+    "print(load_dotenv())\n",
+    "\n",
     "# Access variables\n",
     "api_id = os.getenv(\"TELEGRAM_API_ID\")\n",
     "api_hash = os.getenv(\"TELEGRAM_API_HASH\")\n",
     "phone = os.getenv(\"TELEGRAM_PHONE\")\n",
+    "output_path = os.getenv(\"OUTPUT_PATH\")\n",
     "\n",
     "print(f\"API ID: {api_id}\")\n",
     "print(f\"API Hash: {api_hash}\")\n",
